syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

package recipe;

service recipe{
	rpc getAllCategories(GetCategoriesRequest) returns (CategoryList);
	rpc addCategory(Category) returns (CategoryResponse);
	rpc editCategory(CategoryRequest) returns (CategoryResponse);
	rpc deleteCategory(CategoryRequest) returns (CategoryResponse);
}

message Recipe{
	bytes id = 1;
	string title = 2;
	string ingredients = 3;
	string instructions = 4;
	repeated string categories = 5;
}

message Category{
	string categoryName = 1;
}

message GetCategoriesRequest{

}

message CategoryList{
	repeated string categories = 1;
}

message CategoryRequest{
	string oldCategory = 1;
	string newCategory = 2;
}

message CategoryResponse{
	int32 statusCode = 1;
}